@@ -33,7 +33,6 @@
 #include "dlvhex/ASPSolver.h"
 #include "dlvhex/ASPSolverManager.h"
 #include "dlvhex/AnswerSet.hpp"
-#include "dlvhex/IDSetContainer.hpp"
 
 #include <boost/multi_index_container.hpp>
 #include <boost/multi_index/member.hpp>
@@ -113,6 +112,19 @@ class DLVHEX_EXPORT MLPSolver{
     typedef ValueCallsType::index<impl::AddressTag>::type VCAddressIndex;
     typedef ValueCallsType::index<impl::ElementTag>::type VCElementIndex;
    
+    // to store/index ID
+    typedef boost::multi_index_container<
+      ID, 
+      boost::multi_index::indexed_by<
+        boost::multi_index::random_access<boost::multi_index::tag<impl::AddressTag> >,
+        boost::multi_index::hashed_unique<boost::multi_index::tag<impl::ElementTag>, boost::multi_index::identity<ID> >
+      > 
+    > IDSet; 
+    typedef IDSet::index<impl::AddressTag>::type IDSAddressIndex;
+    typedef IDSet::index<impl::ElementTag>::type IDSElementIndex;
+    // vector of IDTable, the index of the i/S should match with the index in tableInst
+    std::vector<IDSet> A;
+    
     // type for the Mi/S
     typedef std::vector<InterpretationType> VectorOfInterpretation;
     // vector of Interpretation, the index of the i/S should match with the index in tableInst
@@ -138,7 +150,6 @@ class DLVHEX_EXPORT MLPSolver{
     // ending graph
 
     std::vector<ValueCallsType> path;
-    IDSetContainer A;
 
     // int lastSizeOgatoms;
     ProgramCtx ctx;
@@ -163,7 +174,7 @@ class DLVHEX_EXPORT MLPSolver{
     inline bool isOrdinary(const Tuple& idb);
     inline std::vector<int> foundMainModules();
     inline ValueCallsType createValueCallsMainModule(int idxModule);
-    //rmv.19.04 inline void assignFin(IDSet& t);
+    inline void assignFin(IDSet& t);
     inline void findAllModulesAtom(const Tuple& newRules, Tuple& result);
     inline bool containsIDRuleHead(const ID& id, const Tuple& ruleHead);
     inline bool defined(const Tuple& preds, const Tuple& ruleHead);
@@ -175,8 +186,8 @@ class DLVHEX_EXPORT MLPSolver{
     inline void createInterpretationFromTuple(const RegistryPtr& reg1, const Tuple& tuple, Interpretation& result);
     inline int addOrGetModuleIstantiation(const std::string& moduleName, const Interpretation& s);
 
-    //rmv.19.04 inline void resizeIfNeededA(int idxPjT);
-    //rmv.19.04 inline bool containFinA(int idxPjT);
+    inline void resizeIfNeededA(int idxPjT);
+    inline bool containFinA(int idxPjT);
     inline bool comp(ValueCallsType C); // return false if the program is not ic-stratified
     std::ofstream ofsGraph;
     std::ofstream ofsLog;
@@ -187,7 +198,7 @@ class DLVHEX_EXPORT MLPSolver{
 
     inline void printValueCallsType(std::ostringstream& oss, const RegistryPtr& reg1, const ValueCallsType& C) const; 
     inline void printPath(std::ostringstream& oss, const RegistryPtr& reg1, const std::vector<ValueCallsType>& path) const;
-    //rmv.19.04 inline void printA(std::ostringstream& oss, const RegistryPtr& reg1, const std::vector<IDSet>& A) const;
+    inline void printA(std::ostringstream& oss, const RegistryPtr& reg1, const std::vector<IDSet>& A) const;
     inline void printModuleInst(std::ostream& out, const RegistryPtr& reg, int moduleInstIdx);
     inline void printASinSlot(std::ostream& out, const RegistryPtr& reg, const InterpretationPtr& intr);
     inline void printCallGraph(std::ostream& out, const Graph& graph, const std::string& graphLabel);
@@ -533,12 +544,12 @@ void MLPSolver::replacedModuleAtoms(int instIdx, InterpretationPtr& edb, Tuple& 
 	  Tuple::iterator itB = rNew.body.begin();
 	  while ( itB != rNew.body.end() )
 	    {
-	      if ( (*itB).isModuleAtom() && !A.isEmpty(instIdx) )
+	      if ( (*itB).isModuleAtom() && A.size() > instIdx )
 		{ 
 		  // find the module atom in the AiS 
-		  if ( A.containID(instIdx, *itB) )
+		  IDSElementIndex::iterator itE = A.at(instIdx).get<impl::ElementTag>().find(*itB);
+		  if ( itE !=  A.at(instIdx).get<impl::ElementTag>().end() )
 		    { // if found
-
 		      // create the PjT	
 		      // first, get the module atom
 		      ModuleAtom ma = registrySolver->matoms.getByID(*itB);
@@ -769,6 +780,11 @@ bool MLPSolver::isOrdinary(const Tuple& idb)
 }
 
 
+void MLPSolver::assignFin(IDSet& t)
+{ 
+  t.clear();
+  t.get<impl::ElementTag>().insert(ID_FAIL);
+}
 
 
 void MLPSolver::findAllModulesAtom(const Tuple& newRules, Tuple& result)
@@ -1055,10 +1071,29 @@ int MLPSolver::addOrGetModuleIstantiation(const std::string& moduleName, const I
 }
 
 
+// resize A if the size <= idxPjT
+void MLPSolver::resizeIfNeededA(int idxPjT)
+{
+  if (A.size() <= idxPjT)
+    {
+      A.resize(idxPjT+1);
+    } 
+}
+
+
+// we treat Fin as ID_FAIL
+bool MLPSolver::containFinA(int idxPjT)
+{
+  IDSet Ai = A.at(idxPjT);
+  MLPSolver::IDSElementIndex::iterator itAi = Ai.get<impl::ElementTag>().find( ID_FAIL );
+  if ( itAi == Ai.get<impl::ElementTag>().end() ) return false; 
+    else return true;
+}
+
+
 // comp() from the paper 
 bool MLPSolver::comp(ValueCallsType C)
 {
-
   // for ASPSolver
   ASPSolver::DLVSoftware::Configuration config;
   ASPSolverManager mgr;
@@ -1072,7 +1107,7 @@ bool MLPSolver::comp(ValueCallsType C)
   std::vector< ValueCallsType > stackC;
   std::vector< std::vector<ValueCallsType> > stackPath;
   std::vector< InterpretationPtr > stackM;
-  std::vector< IDSetContainer > stackA;// fixed this
+  std::vector< std::vector<IDSet> > stackA;// fixed this
   std::vector< RegistryPtr > stackRegistry;// remove this
   std::vector< ModuleInstTable > stackMInst;// remove this
   std::vector< ID > stackModuleSrcAtom;
@@ -1080,8 +1115,6 @@ bool MLPSolver::comp(ValueCallsType C)
   std::vector< Graph > stackCallGraph;
   std::vector< std::vector<std::string> > stackEdgeName;
   
-  Interpretation currAns;
-
   stackStatus.push_back(0);
   stackC.push_back(C);
   int status = 0; //status=0 for the first time
@@ -1091,17 +1124,11 @@ bool MLPSolver::comp(ValueCallsType C)
   while (stackC.size()>0) 
     {
       if ( stackC.size() > maxStackSize ) maxStackSize = stackC.size();
-//////// begin delete	
-
+	
       C = stackC.back();
       status = stackStatus.back();
-
-//////// end delete
-
       if ( status == 1 || status == 2)	// 1 = from part b, 2 = from part c 
 	{
-//////// begin delete
-
 	  path = stackPath.back();
 	  *M = *stackM.back();
 	  A = stackA.back();
@@ -1109,11 +1136,8 @@ bool MLPSolver::comp(ValueCallsType C)
 	  registrySolver = R2;
 	  M->setRegistry(registrySolver);
 	  moduleInstTable = stackMInst.back();
-
 	  if (status == 2) idAlpha = stackModuleSrcAtom.back();
-	  currAns = *stackAns.back();
-
-//////// end delete
+	  Interpretation currAns = *stackAns.back();
           DBGLOG(DBG,"[MLPSolver::comp] got an answer set from ans(b(R))" << currAns);
           DBGLOG(DBG,"[MLPSolver::comp] M before integrate answer " << *M);
           // union M and N
@@ -1168,7 +1192,9 @@ bool MLPSolver::comp(ValueCallsType C)
 	      int idxPjT = addOrGetModuleIstantiation(alphaJ.moduleName, intrNewT);
 	  
 	      // next: defining the new C and path
-	      if ( /*!MFlag.at(idxPjT).isClear() && */  A.containFin(idxPjT) ) 
+	      resizeIfNeededA(idxPjT); // resize if A size <=idxPjT
+
+	      if ( /*!MFlag.at(idxPjT).isClear() && */ containFinA(idxPjT) ) 
 	        {
 	        }
 	      else
@@ -1216,7 +1242,7 @@ bool MLPSolver::comp(ValueCallsType C)
       // print the A:
       DBGLOG(INFO,"[MLPSolver::comp] with A: ");
       oss.str("");
-      A.print(oss,registrySolver);
+      printA(oss,registrySolver, A);
       DBGLOG(INFO,oss.str());
 
       // int cint;
@@ -1224,8 +1250,6 @@ bool MLPSolver::comp(ValueCallsType C)
       ValueCallsType CPrev;
       int PiSResult;
       bool wasInLoop = false;
-
-      // check i(c) stratified?
       if ( foundCinPath(C, path, CPrev, PiSResult) )
         {
           DBGLOG(DBG, "[MLPSolver::comp] found value-call-loop in value calls");
@@ -1266,8 +1290,6 @@ bool MLPSolver::comp(ValueCallsType C)
         {
           DBGLOG(DBG, "[MLPSolver::comp] found no value-call-loop in value calls");
         }
-
-      // rewrite
       InterpretationPtr edbRewrite;
       Tuple idbRewrite;
       rewrite(C, edbRewrite, idbRewrite); 
@@ -1334,8 +1356,6 @@ bool MLPSolver::comp(ValueCallsType C)
 	          // get the next answer set 
                   int0 = res->getNextAnswerSet();
                 } // while (int0...
-///// begin insert
-///// end insert
 	    } // if path.size == 0 ...
           else
             {
@@ -1353,7 +1373,8 @@ bool MLPSolver::comp(ValueCallsType C)
               VCAddressIndex::const_iterator it = idx.begin();
               while ( it != idx.end() )
                 {
-                  A.assignFin(*it);
+                  IDSet& t = A.at(*it);
+                  assignFin(t);
                   it++;  
                 } 
               // for all ans(newCtx) here
@@ -1368,7 +1389,7 @@ bool MLPSolver::comp(ValueCallsType C)
 	      AnswerSet::Ptr int0 = res->getNextAnswerSet();
 	      if ( int0!=0 ) 
 	        {
-	          stackAns.push_back(int0->interpretation);	
+	          stackAns.push_back((int0->interpretation));	
           	  stackAnsRes.push_back(res);
           	  stackStatus.push_back(1);
           	  stackC.push_back(C2);
@@ -1402,13 +1423,15 @@ bool MLPSolver::comp(ValueCallsType C)
           DBGLOG(DBG, "[MLPSolver::comp] smallest ill by: " << idAlpha);
           // check the size of A
           DBGLOG(DBG, "[MLPSolver::comp] moduleInstTable size: " << moduleInstTable.size());
+          DBGLOG(DBG, "[MLPSolver::comp] A size: " << A.size());
+          if ( A.size() < moduleInstTable.size() )  A.resize( moduleInstTable.size() );
       
           // loop over PiS in C, insert id into AiS
           const VCAddressIndex& idx = C.get<impl::AddressTag>();
           VCAddressIndex::const_iterator it = idx.begin();
           while ( it != idx.end() )
             {
-	      A.add(*it, idAlpha);
+	      A.at(*it).get<impl::ElementTag>().insert(idAlpha); 
               it++;  
             } 
           Tuple bottom;
@@ -1437,7 +1460,7 @@ bool MLPSolver::comp(ValueCallsType C)
 
           if ( int0!=0 ) 
             {
-	      stackAns.push_back(int0->interpretation);	
+	      stackAns.push_back((int0->interpretation));	
               stackAnsRes.push_back(res);
               stackStatus.push_back(2);
               stackC.push_back(C);
@@ -1521,22 +1544,22 @@ MLPSolver::ValueCallsType MLPSolver::createValueCallsMainModule(int idxModule)
 
 bool MLPSolver::solve()
 {
-
   printProgramInformation = false;
   DBGLOG(STATS, "1st row: '80'-> ignore this; 2nd row: ctrAS; 3rd row: #moduleInstantiation, 4th row: #ordinaryGroundAtoms, 5th row: #ASFromDLV, 6th row: #callToDLV, 7th row: TimeElapsed");
   DBGLOG(DBG, "[MLPSolver::solve] started");
   // find all main modules in the program
   std::vector<int> mainModules = foundMainModules(); 
   std::vector<int>::const_iterator it = mainModules.begin();
+  int i = 0;
   dataReset();
   // to record time
   struct timeval startTimeStruct;
   gettimeofday(&startTimeStruct, NULL);
   startTime = startTimeStruct.tv_sec+(startTimeStruct.tv_usec/1000000.0);
+
+  ctrAS = 0;	
   ctrCallToDLV = 0;
   ctrASFromDLV = 0;
-  ctrAS = 0;	
-  int i = 0;
   while ( it != mainModules.end() )
     {
       A.clear();
@@ -1570,26 +1593,64 @@ bool MLPSolver::solve()
   DBGLOG(INFO, "Registry information: "); 
   DBGLOG(INFO, *registrySolver); 
 */
-/*  
-  IDSetContainer A;
-  ID id2(0,2);
-  A.add(1,id2);
-  ID id3(0,3);
-  A.add(1,id3);
-  ID id6(0,6);
-  A.add(5,id6);
-  A.assignFin(3);
-  std::ostringstream oss;  
-  A.print(oss);
-  std::cout << oss.str();
-  std::cout << A.containFin(2) << std::endl;
-  std::cout << A.containFin(5) << std::endl;
-  std::cout << A.containFin(3) << std::endl;
-  std::cout << A.isEmpty(1) << std::endl;
-  std::cout << A.isEmpty(5) << std::endl;
-  std::cout << A.isEmpty(6) << std::endl;
-*/
   DBGLOG(INFO, "[MLPSolver::solve] finished");
+  
+/*
+  Graph g;
+  std::string vertexName[] = { "p1[{}]", "p2[{q(a),q(b)}]", "p3[{q(a)}]", "zow.h", "foo.cpp",
+                       "libzigzag.a", "killerapp" };
+
+  std::string edgeName[] = { "a", "b", "c", "d"};
+
+
+  int a = 1;
+  int b = 2;
+  int label=4;
+  boost::add_edge(a, b, label, g);
+  a=2;
+  b=3;
+  label = 4;
+  boost::add_edge(a, b, label, g);
+  a=1;
+  b=3;
+  label = 4;
+  boost::add_edge(a, b, label, g);
+/*
+  boost::property_map<Graph, boost::vertex_name_t>::type Vertex_name = get(boost::vertex_name, g);
+  boost::property_map<Graph, boost::edge_name_t>::type Edge_name = get(boost::edge_name, g);
+
+  Vertex u = boost::vertex(1, g);
+  Vertex v = boost::vertex(2, g);
+  Vertex_name[u] = "p1[{}]";
+  Vertex_name[v] = "p2[{q(a),q(b)}]";
+  Edge e1 = boost::add_edge(u, v, g).first;
+  Edge_name[e1] = "a";
+*/ 
+/*
+  VertexIterator itg, itg_end;
+  boost::tie(itg, itg_end) = boost::vertices(g);
+  int ig=0;
+  while (itg != itg_end ) 
+    {
+      DBGLOG(DBG, "[MLPSolver::solve] vertex [" << ig << "]: " << *itg);      
+      itg++;
+      ig++;
+    } 
+
+  EdgeIterator ite, ite_end;
+  boost::tie(ite, ite_end) = boost::edges(g);
+  int ie=0;
+  while (ite != ite_end ) 
+    {
+      DBGLOG(DBG, "[MLPSolver::solve] edge [" << ie << "]: " << *ite << ";" << g[*ite]);      
+      ite++;
+      ie++;
+    } 
+
+//  boost::write_graphviz(std::cout, g, boost::make_label_writer(vertexName), boost::make_label_writer(edgeName));
+
+  boost::write_graphviz(std::cout, g, boost::make_label_writer(vertexName));
+*/
   return true;
 }
 
@@ -1627,6 +1688,38 @@ void MLPSolver::printPath(std::ostringstream& oss, const RegistryPtr& reg1, cons
 }
 
 
+void MLPSolver::printA(std::ostringstream& oss, const RegistryPtr& reg1, const std::vector<IDSet>& A) const
+{
+  RawPrinter printer(oss, reg1);
+
+  std::vector<IDSet>::const_iterator it = A.begin();
+  int i=0;
+  bool first;
+  while ( it != A.end() )
+    {
+      oss << "A[" << i << "]: "; 	
+      IDSAddressIndex::const_iterator itIDSet = (*it).begin();
+      first = true;
+      while ( itIDSet != (*it).end() )	
+	{
+	  // print here
+	  if (first == false) oss << ", ";
+	  if ( *itIDSet == ID_FAIL )
+		oss << "fin";
+	  else 
+	    {
+	      printer.print(*itIDSet);
+	    }		
+
+	  itIDSet++;
+	  first = false;
+	}
+      oss << std::endl;	
+      i++;			
+      it++;
+    }
+}
+
 // print the text of module instantiation, given the module index (index to the instantiation table)
 // example: p1[{q(a),q(b)}]
 void MLPSolver::printModuleInst(std::ostream& out, const RegistryPtr& reg, int moduleInstIdx)
@@ -1647,6 +1740,7 @@ void MLPSolver::printModuleInst(std::ostream& out, const RegistryPtr& reg, int m
 
 void MLPSolver::printASinSlot(std::ostream& out, const RegistryPtr& reg, const InterpretationPtr& intr)
 {
+//  Interpretation newIntr( reg );
   InterpretationPtr newIntr (new Interpretation(reg) );
   out << "(";
   bool first = true;
@@ -1663,6 +1757,25 @@ void MLPSolver::printASinSlot(std::ostream& out, const RegistryPtr& reg, const I
 	  
 	}
     }
+/*
+  for (int i=0; i<MFlag.size();i++)
+    {
+      newIntr.clear();
+      newIntr.add(*intr);
+      newIntr.bit_and(MFlag.at(i));
+      if (!newIntr.isClear())	
+	{ // print
+	  if (first == false) 
+	    {
+	      out << ", ";
+	    }
+          printModuleInst(out,reg,i);
+          out << "=";
+          newIntr.printWithoutPrefix(out);
+	  first = false;
+	}	
+    } 
+*/
   out << ")"; 
 }
 
